<resources>
	<string name="app_name">Open GPS Tracker</string>
    <string name="service_start">Activating logging service</string>
	<string name="service_gpsstatus">Logging: %1$s (%2$s with %3$d satellites)</string>
	<string name="service_gpsnostatus">Logging: %1$s (Precision %2$s)</string>
    <string name="service_networkstatus">Logging: %1$s (%2$s with cell tower and wifi)</string>
    <string name="service_gpsdisabled">GPS is disabled, logging is without effect.</string>
    <string name="service_gpsenabled">GPS is enabled, commencing logging.</string>
    <string name="service_connectiondisabled">Network is disabled, network location logging is without effect.</string>
    <string name="service_datadisabled">Network positioning is disabled, logging is without effect.</string>
    <string name="service_dataenabled">Network positioning is enabled, commencing logging.</string>
    <string name="service_gpsproblem">Receiving no location information</string>
    <string name="dialog_select_media_title">Select note</string>
    <string name="dialog_select_media_message">Multiple notes were found at this location, please select one to open</string>
    <string name="dialog_tracking_title">Tracking control</string>
	<string name="dialog_routename_title">Name track</string>
    <string name="dialog_routename_message">Please enter the name of the track</string>
    <string name="dialog_routename_default">Track %1$tY-%2$tm-%3$td %4$tH:%5$tM</string>
    <string name="dialog_notrack_title">No track is selected</string>
    <string name="dialog_notrack_message">Please select a track first before exporting</string>
    <string name="dialog_delete_title">Delete track</string>
    <string name="dialog_delete_message">Please confirm the deletion of the track %s</string>
    <string name="dialog_nooiabout">OI About missing</string>
    <string name="dialog_nooiabout_message">The application \"OI About\" from the OpenIntents project is required to display the about information.</string>
    <string name="dialog_layer_title">Activate overlays</string>
    <string name="dialog_graphtype_title">Graph type</string>
    <string name="dialog_notetext_title">Text note</string>
    <string name="dialog_notetext_message">Enter a text note for the current location</string>
    <string name="dialog_notename_title">Mark</string>
    <string name="dialog_notename_message">Enter the name of this location</string>
    <string name="logcontrol_start">Start tracking</string>
    <string name="logcontrol_pause">Pause tracking</string>
    <string name="logcontrol_resume">Resume tracking</string>
    <string name="logcontrol_stop">Stop tracking</string>
    <string name="layer_regular">Normal map</string>
    <string name="layer_satellite">Satellite</string>
    <string name="layer_traffic">Traffic</string>
    <string name="layer_speed">Speed</string>
    <string name="layer_altitude">Altitude</string>
    <string name="layer_distance">Distance</string>
    <string name="layer_compass">Compass</string>
    <string name="layer_location">My Location</string>
    <string name="layer_cloudmade">CloudMade maps</string>
    <string name="layer_maknik">Mapnik</string>
    <string name="layer_bicycle">OpenCycleMap</string>
    <string name="dialog_vacuum_title">Crop data</string>
    <string name="dialog_vacuum_message">Returns space lost due to fragmentation by a rebuilding the database.</string>
    <string name="dialog_import_title">GPX import</string>
    <string name="dialog_import_message">Would you like to import the GPX %1$s ?</string>
    <string name="dialog_import_picker">Import GPX file</string>
    <string name="menu_picker">Import</string>
    <string name="dialog_nooipicker">OI File Manager</string>
    <string name="dialog_nooipicker_message">The application \"OI File Manager\" from the OpenIntents project is required to pick files. After accepting OI File Manager EULA the import button works.</string>
    <string name="dialog_contrib_title">Contribute</string>
    <string name="dialog_bundlecreate_hint">New bundle name</string>
    <string name="dialog_trackdescription_hint">Description of the track</string>
    <string name="dialog_public">Public posting</string>
    <string name="dialog_description_title">Track description</string>
    <string name="dialog_description_message">Please supply additional information before uploading</string>
    <string name="dialog_bundle">Bundle: %1$s</string>
    <string name="authentication_redirect">Placing authentication request</string>
    <string name="loading">Loading&#8230;</string>
    <string name="msg_connecting_to">Connecting to&#8230;</string>
    <string name="no_information_available">No information available.</string>
    <string name="taskerror_gpx_import">Importing GPX data</string>
    <string name="taskerror_xml_write">Writing XML data</string>
    <string name="taskerror_gpx_write">Writing GPX data</string>
    <string name="taskerror_kmz_write">Writing KMZ data</string>
    <string name="taskerror_breadcrumbs_activity">Retrieving activity list from GoBreadcrumbs</string>
    <string name="taskerror_breadcrumbs_bundle">Retrieving bundle list from GoBreadcrumbs</string>
    <string name="taskerror_breadcrumbs_track">Retrieving track list from GoBreadcrumbs</string>
    <string name="taskerror_breadcrumbs">Retrieving data from GoBreadcrumbs</string>
    <string name="taskerror_breadcrumbs_upload">Uploading track to GoBreadcrumbs</string>
    <string name="dialog_breadcrumbsconnect">Breadcrumbs</string>
    <string name="dialog_breadcrumbsconnect_message">Authorize Open GPS Tracker with Breadcrumbs?</string>
    <string name="dialog_contrib_message">
    <b>Code</b>
    \n
    This application and the source code are publicly available. Feel free to submit
    a patch. All code contributions are very welcome. The complete application source is 
    available under GPL license at http://code.google.com/p/open-gpstracker/source
    \n\n
    <b>Errors</b>
    \n
    In case of an error, crash or fault please send a message. Log the error 
    at http://code.google.com/p/open-gpstracker/issues/entry and make an important 
    contribution to improve this application.  
    \n\n
    <b>Idea\'s</b>
    \n
    Do you have an idea that could improve this application? Explain your idea at
    http://code.google.com/p/open-gpstracker/issues/entry
    \n\n
    <b>Donate</b>
    \n
    Hopefully you enjoyed the application, I love to hear if you did. A thank you 
    or PayPal donation are appreciated at rcgroot@gmail.com
    \n\n
    </string>
    <string name="from">Tracked on: </string>
    <string name="no_tracks">No tracks stored</string>
    <string name="ticker_saving">Saving: </string>
    <string name="ticker_stored">Stored: </string>
    <string name="ticker_failed">Unable to save the route: </string>
    <string name="error_filenotfound"> reason: Can not find file or directory on SD card</string>
    <string name="error_filename"> reason: Incorrect filename</string>
    <string name="error_buildxml"> reason: Error building XML</string>
    <string name="error_writesdcard"> reason: Error writing to SD card</string>
    <string name="error_response"> reason: Server response indicates error</string>
    <string name="tweettext">%1$s: Traveled %2$s with an average speed of %3$s during %4$s #opengpstracker</string>
    <string name="error_importgpx_xml">Failed reading the XML during import.</string>
    <string name="error_importgpx_io">Failed reading the file during import.</string>
    <string name="error_importgpx_parse">Failed reading a number during import.</string>
    <string name="time_and_speed">At %1$s going %2$s</string>
	<string name="btn_okay">OK</string>
	<string name="btn_cancel">Cancel</string>
	<string name="btn_save">Save</string>
	<string name="btn_selecttrack">Select track</string>
    <string name="btn_install">Install</string>
    <string name="btn_skip">Skip</string>
	<string name="menu_settings">Settings</string>
    <string name="menu_tracking">Tracking</string>
	<string name="menu_tracklist">List tracks</string>
	<string name="menu_shareTrack">Share track</string>
	<string name="menu_deleteTrack">Delete track</string>
    <string name="menu_renameTrack">Rename track</string>
    <string name="menu_statistics">Statistics</string>
    <string name="menu_about">About</string>
    <string name="menu_showLayers">Overlays</string>
    <string name="menu_graphtype">Graph type</string>
    <string name="menu_insertnote">Make note</string>
    <string name="menu_notename">Mark with a name</string>
    <string name="menu_notepicture">Take Picture</string>
    <string name="menu_notetext">Write Text</string>
    <string name="menu_notespeech">Record Speech</string>
    <string name="menu_notevideo">Record Video</string>
    <string name="graphtype_timespeed">Speed over time</string>
    <string name="graphtype_timealtitude">Altitude over time</string>
    <string name="graphtype_distancespeed">Speed over distance</string>
    <string name="graphtype_distancealtitude">Altitude over distance</string>
    <string name="menu_vacuum">Crop data</string>
    <string name="menu_contrib">Contribute</string>
    <string name="email_subject">Open GPS Tracker - Track data</string>
    <string name="email_gpxbody">Attached is a track in GPS Exchange Format (GPX) format as described on http://www.topografix.com/gpx.asp</string>
    <string name="email_kmzbody">Attached is a track in KMZ format as described on http://code.google.com/apis/kml/documentation/kml_tut.html</string>
    <string name="kmlVideoUnsupported">Embedded video is not supported, please use a zip tools to retrieve the %s video file from the KMZ file.</string>
    <string name="kmlAudioUnsupported">Embedded audio is not supported, please use a zip tools to retrieve the %s audio file from the KMZ file.</string>
    <string name="share_track">Share this track</string>
    <string name="share_explained">Sharing creates a track export with as much of the recorded data as possible.</string>
    <string name="share_type">Choose format of shared track:</string>
    <string name="share_name">Name of export:</string>
    <string name="share_target">Means of sharing:</string>
    <string name="sender_chooser">Choose sender application</string>
    <string name="opengpstracker_title">Open GPS Tracker</string>
    <string name="opengpstracker_settings">Settings</string>
    <string name="preference_display">Display settings</string>
    <string name="preference_behavior">Run settings</string>
    <string name="logatstartup">Log at service start</string>
    <string name="logatstartup_summary">After starting, the logging service immediately records.</string>
    <string name="logatdock">Log at car docking</string>
    <string name="logatdock_summary">After inserting in a car dock, the logging immediately records.</string>
    <string name="stopatundock">Stop logging at undocking</string>
    <string name="stopatundock_summary">After exiting a dock, the logging immediately stops.</string>
    <string name="startupatboot">Start up at boot</string>
    <string name="startupatboot_summary">After starting the device, the logging service starts.</string>
    <string name="disableblanking_title">Disable screen blanking</string>
    <string name="disableblanking_summary">Keeps the screen on during tracking.</string>
    <string name="disabledimming_title">Disable screen dimming</string>
    <string name="disabledimming_summary">Keeps the screen on full brightness during tracking.</string>
    <string name="stat_maximumspeed">Maximum speed</string>
    <string name="stat_averagespeed">Average speed</string>
    <string name="stat_distance">Tracked distance</string>
    <string name="stat_endtime">Last time</string>
    <string name="stat_starttime">Start time</string>
    <string name="stat_trackname">Track name</string>
    <string name="stat_waypoints">Waypoints</string>
</resources>