<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="fill_parent"
   android:layout_height="wrap_content"
   android:orientation="vertical"
>
   <Button
      android:text="@string/logcontrol_start"
      android:id="@+id/logcontrol_start"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:state_enabled="false"
   ></Button>
   <Button
      android:text="@string/logcontrol_pause"
      android:id="@+id/logcontrol_pause"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:state_enabled="false"
   ></Button>
   <Button
      android:text="@string/logcontrol_resume"
      android:id="@+id/logcontrol_resume"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:state_enabled="false"
   ></Button>
   <Button
      android:text="@string/logcontrol_stop"
      android:id="@+id/logcontrol_stop"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:state_enabled="false"
   ></Button>
</LinearLayout>
