<?xml version="1.0" encoding="utf-8"?>

<TableLayout 
    android:id="@+id/TableLayout01" 
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent" 
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TableRow 
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content">
	    <TextView 
	        android:text="@string/stat_trackname" 
	        android:layout_width="wrap_content" 
	        android:layout_height="wrap_content"
	        android:paddingRight="15dp"/>
        <TextView  
            android:id="@+id/stat_trackname" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content"/>
    </TableRow>
    <TableRow 
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content">
        <TextView 
            android:text="@string/stat_starttime" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content"
            android:paddingRight="15dp"/>
        <DateView  
            android:id="@+id/stat_starttime" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content"/>
    </TableRow>
    <TableRow 
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content">
        <TextView 
            android:text="@string/stat_endtime" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content"
            android:paddingRight="15dp"/>
        <DateView  
            android:id="@+id/stat_endtime" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content"/>
    </TableRow>
    <TableRow 
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content">
        <TextView 
            android:text="@string/stat_distance" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content"
            android:paddingRight="15dp"/>
        <TextView  
            android:id="@+id/stat_distance" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content"/>
    </TableRow>
    <TableRow 
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content">
        <TextView 
            android:text="@string/stat_averagespeed" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content"
            android:paddingRight="15dp"/>
        <TextView  
            android:id="@+id/stat_averagespeed" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content"/>
    </TableRow>
    <TableRow 
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content">
        <TextView 
            android:text="@string/stat_maximumspeed" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content"
            android:paddingRight="15dp"/>
        <TextView  
            android:id="@+id/stat_maximumspeed" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content"/>
    </TableRow>
    <TableRow 
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content">
        <TextView 
            android:text="@string/stat_waypoints" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content"
            android:paddingRight="15dp"/>
        <TextView  
            android:id="@+id/stat_waypoints" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content"/>
    </TableRow>
</TableLayout>
