<LinearLayout
   android:layout_height="fill_parent"
   xmlns:android="http://schemas.android.com/apk/res/android"
   android:orientation="vertical"
   android:layout_width="fill_parent"
>
   <ScrollView
      android:layout_width="fill_parent"
      android:layout_height="0dip"
      android:layout_weight="1"
   >
      <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:padding="5dip"
      >
         <TextView
            android:text="@string/dialog_filename_message"
            style="?android:attr/textAppearanceMedium"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="5dip" />
         <TextView
            android:text="@string/share_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
         <Spinner
            android:id="@+id/typeSpinner"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent" />


         <TextView
            android:text="@string/share_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
         <EditText
            android:id="@+id/fileNameField"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:singleLine="true"
            android:layout_width="fill_parent" />

         <TextView
            android:text="@string/share_target"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
         <Spinner
            android:id="@+id/targetSpinner"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent" />
      </LinearLayout>
   </ScrollView>


   <LinearLayout
      style="@android:style/ButtonBar"
      android:layout_gravity="bottom"
      android:orientation="horizontal"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
   >

      <Button
         android:id="@+id/skip_button"
         android:layout_height="wrap_content"
         android:layout_width="140dip"
         android:ellipsize="marquee"
         android:singleLine="true"
         android:text="@string/btn_cancel" />
      <!-- Placeholder to get blank space between the two buttons -->
      <View
         android:visibility="invisible"
         android:layout_height="0dip"
         android:layout_width="1dip"
         android:layout_weight="1" />
      <Button
         android:id="@+id/next_button"
         android:layout_height="wrap_content"
         android:layout_width="140dip"
         android:drawablePadding="3dip"
         android:ellipsize="marquee"
         android:singleLine="true"
         android:text="@string/btn_okay" />
   </LinearLayout>

</LinearLayout>
